--- a/src/css/about.css
+++ b/src/css/about.css
@@ -2,12 +2,13 @@
 
 .aboutUsSectMain{
 
-    grid-column: 2/11;
+    grid-column: 2/12;
   grid-row: 10/19;
   margin-top: 200px;
   margin-bottom: 200px;
   justify-content: center;
   display: flex;
+  margin-left: 70px;
   
   
 }
