--- a/src/css/foodCat.css
+++ b/src/css/foodCat.css
@@ -1,5 +1,5 @@
 .FoodCatSect {
-    grid-column: 2/11;
+    grid-column: 2/12;
     grid-row: 20/25;
     
     display: flex;
@@ -7,6 +7,7 @@
     flex-direction: column;
     align-items: center;
     position: relative;
+    margin-left: 70px;
     
     
 }
